<resources>
    <string name="app_name">RoboNav</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="username_icon">Username Icon</string>
    <string name="app_logo">App Logo</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="password_icon">Password Icon</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="welcome_to_home">Welcome to Home</string>
    <string name="home">Home</string>
    <string name="map">Map</string>
    <string name="navigation">Navigation</string>
    <string name="re_enter_your_password">Re-enter your password</string>
    <string name="confirm_password_icon">Confirm Password Icon</string>
    <string name="email_icon">Email Icon</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="submit">Submit</string>
    <string name="back_to_login">Back to Login</string>
    <string name="menu">Menu</string>
    <string name="sign_out">Sign Out</string>
    <string name="reset_password">Reset Password</string>
    <string name="utilities">Utilities</string>
    <string name="change_password">Change Password</string>
    <string name="close">Close</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="current_password">Current Password</string>
    <string name="enter_current_password">Enter current password</string>
    <string name="new_password">New Password</string>
    <string name="create_robot">Create Robot</string>
    <string name="robot_model">Robot Model</string>
    <string name="enter_robot_model">Enter Robot Model</string>
    <string name="ip_address">IP Address</string>
    <string name="enter_ip_address">Enter IP Address</string>
    <string name="port">Port</string>
    <string name="enter_port_number">Enter Port Number</string>
    <string name="create_task">Create Task</string>
    <string name="task_name">Task Name</string>
    <string name="select_robot">Select Robot</string>
    <string name="enter_task_name">Enter task name</string>
    <string name="select_location">Select Location</string>
    <string name="get_coordinates">Get Coordinates</string>
    <string name="remove_location">Remove Location</string>
    <string name="enter_location_name">Enter location name</string>
    <string name="save_location">Save Location</string>
    <string name="location_name">Location Name:</string>
    <string name="enter_the_code">Enter the code</string>
    <string name="send_code">Send Code</string>
    <string name="enter_reset_code">Reset Code</string>
    <string name="email_input_field">Enter your email address</string>
    <string name="robot_information">Robot Information</string>
    <string name="active_tasks">Active Tasks</string>
    <string name="instruction_queue">Instruction Queue</string>
    <string name="coordinates">Coordinates:</string>
    <string name="fulfilled_by">Fulfilled By:</string>
    <string name="queue_instruction">Queue Instruction</string>
    <string name="select_task">Select Task</string>
    <string name="todo">TODO</string>
    <string name="loading">Loading…</string>
    <string name="callback_records">Callback Records</string>
    <string name="location_utilities">Location Utilities</string>
    <string name="battery_icon">Battery Icon</string>
    <string name="default_task">No task assigned</string>
    <string name="battery_placeholder">Battery: —%</string>
    <string name="task_placeholder">Task: None</string>
    <string name="location_placeholder">Location: Unknown</string>
    <string name="battery_status">Displays robot battery percentage</string>
    <string name="task_status">Displays the current robot task</string>
    <string name="location_status">Displays the robot\'s location</string>
    <string name="delete_robot">Delete Robot</string>
    <string name="current_location">Current Location</string>
    <string name="current_position">Current Position</string>
    <string name="swipe_down">Swipe Down</string>
    <string name="task_progress">Task Progress</string>
    <string name="task_icon">Task Icon</string>
    <string name="task_deliver_supplies">Task: Deliver Supplies</string>
    <string name="progress_unknown">Progress: Unknown</string>
    <string name="started">Started:</string>
    <string name="current_status">Current Status</string>
    <string name="executing">Executing...</string>
    <string name="delete_task">Delete Task</string>
    <string name="date_completed">Date Completed</string>
    <string name="task_info">Task Info</string>
    <string name="active">Active</string>
    <string name="enter_email">Email</string>


</resources>
