<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:background="@color/gray_dark"
    android:orientation="horizontal"
    android:padding="16dp"
    android:clickable="true"
    android:focusable="true">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">

        <TextView
            android:id="@+id/task_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_deliver_supplies"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/task_robot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Robot: Robot #3"
            android:textColor="#CCCCCC"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/task_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/started"
            android:textColor="#CCCCCC"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/task_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/progress_unknown"
            android:textColor="#CCCCCC"
            android:textSize="16sp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/task_icon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="end|bottom"
        android:contentDescription="@string/task_icon" />
</LinearLayout>
