<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".fragments.UtilitiesFragment">

        <!-- Title: Navigation -->

        <!-- Dynamic content container -->
        <TextView
            android:id="@+id/title_map_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"

            android:text="@string/instruction_queue"

            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <FrameLayout
            android:id="@+id/dynamic_content_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@color/gray_medium"
            app:layout_constraintTop_toBottomOf="@id/title_map_info">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/select_task"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <Spinner
                    android:id="@+id/task_dropdown"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:background="@color/white"
                    android:minHeight="48dp" />

                <TextView
                    android:id="@+id/current_robot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/fulfilled_by"
                    android:textColor="@android:color/darker_gray"
                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="16dp"
                    android:layout_marginBottom="8dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/select_location"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <Spinner
                    android:id="@+id/pre_existing_location_dropdown"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:background="@color/white"
                    android:minHeight="48dp" />

                <TextView
                    android:id="@+id/location_coordinates"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/coordinates"
                    android:textColor="@color/high_contrast_gray_dark"
                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="16dp"
                    android:layout_marginBottom="8dp"/>

                <Button
                    android:id="@+id/btn_add_instruction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/blue_dark"
                    android:text="@string/queue_instruction"
                    android:textColor="@android:color/white"
                    android:layout_gravity="center_horizontal"
                    android:paddingHorizontal="32dp"/>

            </LinearLayout>
        </FrameLayout>

        <!-- Title: Stop Navigation -->

        <!-- Stop navigation container -->

        <!-- Title: Output Messages -->

        <!-- Refresh Button -->

        <!-- Output ScrollView -->

        <androidx.core.widget.NestedScrollView
            android:id="@+id/output_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
