<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_dark"
    tools:context=".activities.ForgotPasswordActivity">

    <!-- Logo Image -->
    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="35dp"
        android:contentDescription="@string/app_logo"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Card Container -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        app:cardBackgroundColor="@color/gray_medium"
        app:cardCornerRadius="4dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logoImageView"
        tools:ignore="TextSizeCheck">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- Email Label -->
            <TextView
                android:id="@+id/emailLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="20dp"
                android:text="@string/enter_email"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:labelFor="@id/emailEditText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <EditText
                android:id="@+id/emailEditText"
                android:layout_width="279dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:hint="@string/enter_your_email"
                android:autofillHints="emailAddress"
                android:background="@drawable/edittext_background"
                android:importantForAccessibility="yes"
                android:inputType="textEmailAddress"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textColor="@color/white"
                android:textColorHint="@color/gray_high_contrast"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/emailLabel" />


            <!-- Submit Button -->
            <Button
                android:id="@+id/submitButton"
                android:layout_width="279dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:backgroundTint="@color/blue_dark"
                android:text="@string/send_code"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/emailEditText" />

            <!-- Reset Code Label (Initially Hidden) -->
            <TextView
                android:id="@+id/resetCodeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="15dp"
                android:autofillHints=""
                android:importantForAutofill="no"
                android:text="@string/enter_reset_code"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:visibility="visible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/submitButton" />

            <!-- Reset Code Field (Initially Hidden) -->
            <EditText
                android:id="@+id/resetCodeEditText"
                android:layout_width="279dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edittext_background"
                android:hint="@string/enter_the_code"
                android:inputType="number"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textColor="@color/white"
                android:autofillHints=""
                android:textColorHint="@color/gray_high_contrast"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/resetCodeLabel" />

            <!-- Verify Code Button (Initially Hidden) -->
            <Button
                android:id="@+id/verifyButton"
                android:layout_width="279dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:backgroundTint="@color/blue_dark"
                android:text="Verify Code"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/resetCodeEditText"
                tools:ignore="HardcodedText" />

            <!-- Back to Login -->
            <TextView
                android:id="@+id/backToLoginText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="20dp"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:minHeight="48dp"
                android:text="@string/back_to_login"
                android:textColor="@color/gray_high_contrast"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/verifyButton" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
